Project1VS/force-app/main/default/objects/Character__c/fields/Alignment__c.field-meta.xml
<CustomField>
    <fullName>Alignment__c</fullName>
    <label>Alignment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>