Project1VS/force-app/main/default/objects/Character__c/fields/Backstory__c.field-meta.xml
<CustomField>
    <fullName>Backstory__c</fullName>
    <label>Backstory</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>