Project1VS/force-app/main/default/objects/Character__c/fields/Charisma__c.field-meta.xml
<CustomField>
    <fullName>Charisma__c</fullName>
    <label>Charisma</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>