Project1VS/force-app/main/default/objects/Character__c/fields/Dexterity__c.field-meta.xml
<CustomField>
    <fullName>Dexterity__c</fullName>
    <label>Dexterity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>