Project1VS/force-app/main/default/objects/Character__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>TextArea</type>
</CustomField>