Project1VS/force-app/main/default/objects/Character__c/fields/Experiance__c.field-meta.xml
<CustomField>
    <fullName>Experiance__c</fullName>
    <label>Experiance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>