Project1VS/force-app/main/default/objects/Character__c/fields/Features_and_Traits__c.field-meta.xml
<CustomField>
    <fullName>Features_and_Traits__c</fullName>
    <label>Features and Traits</label>
    <type>TextArea</type>
</CustomField>