Project1VS/force-app/main/default/objects/Character__c/fields/Personality__c.field-meta.xml
<CustomField>
    <fullName>Personality__c</fullName>
    <label>Personality</label>
    <type>TextArea</type>
</CustomField>