Project1VS/force-app/main/default/objects/Character__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <length>80</length>
    <type>Text</type>
</CustomField>